--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,12 @@ charset-normalizer==2.1.0
 dateparser==1.1.1
 frozenlist==1.3.1
 idna==3.3
+importlib-resources==5.9.0
+inputimeout==1.0.4
+jsonschema==4.14.0
 multidict==6.0.2
+pkgutil_resolve_name==1.3.10
+pyrsistent==0.18.1
 python-binance==1.0.16
 python-dateutil==2.8.2
 pytz==2022.2.1
@@ -22,3 +27,4 @@ ujson==5.4.0
 urllib3==1.26.11
 websockets==10.3
 yarl==1.8.1
+zipp==3.8.1
