--- a/config.json
+++ b/config.json
@@ -4,7 +4,5 @@
     "timeout": 60,
   "long_term": 15,
   "short_term": 5,
-  "interval": "15m",
-  "order_type": "LIMIT",
-  "time_in_force": "FOK"
+  "interval": "15m"
 }
